# MiniChain

./: .coderabbit.yaml  .gitignore  COMMAND.md  Makefile  README.md  Roadmap.md  genesis.json  implementation.md  main.py  package-lock.json  pyproject.toml  reproduce_timestamp_bug.py  requirements.txt  setup.py  test_pid_integration.py  testing.md
.node1/: data.json
api/: main.py
consensus/: pow.py
core/: block.py  chain.py  contract.py  merkle.py  mining.py  state.py  transaction.py
doc/: testing.md
examples/: counter.py  dex.py  stablecoin.py  user_profile.py
minichain/: __init__.py  block.py  chain.py  contract.py  mempool.py  merkle.py  mining.py  mpt.py  network_config.py  node_config.py  p2p.py  persistence.py  pid.py  pow.py  receipt.py  rpc.py  serialization.py  state.py  transaction.py  utils.py  validators.py
minichain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
network/: p2p.py
node/: mempool.py
scripts/: setup-hooks.sh
tests/: test_block.py  test_block_gossip.py  test_cache.py  test_chain.py  test_chain_sync.py  test_cli.py  test_comprehensive_integration.py  test_consensus.py  test_contract.py  test_contract_calls.py  test_contract_transfers.py  test_core.py  test_crypto.py  test_difficulty.py  test_genesis.py  test_mempool.py  test_merkle.py  test_mining.py  test_negative_fee.py  test_network.py  test_node.py  test_persistence.py  test_persistence_runtime.py  test_pid_integration.py  test_pow_validation.py  test_protocol_hardening.py  test_reorg.py  test_rpc.py  test_scaffold.py  test_serialization.py  (+6 more)
(+21 files in other folders)
